# concordity-hack

./: .gitignore  README.md
task2/: Cargo.toml
task2/src/: lib.rs
task3/: index.html  package-lock.json  package.json
