# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "task2"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "Ladislav Sládeček <ladislav.sladecek@gmail.com>" ]
description = "task2"

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "6.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
